Restored accidentally moved files to correct structure